# tracker

./: .gitignore  Cargo.toml  Dockerfile  config.yml
migrations/: 20221210082609_locations.up.sql
src/: config.rs  main.rs
src/http/: error.rs  mod.rs
src/models/: location.rs
src/routes/: location.rs
