[package]
name = "tracker"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]


[dependencies]
tokio = { version = "1.22", features = ["full", "time"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite", "macros", "offline", "chrono"] }
axum = { version = "0.6" }
tower = "0.4"
tower-http = { version = "0.3.5", features = [ "trace", "fs" ] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
dotenv = "0.15"
